Installed react native camera

--- a/ios/Snapper/Info.plist
+++ b/ios/Snapper/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>We use camera access to capture photos with your device.</string>
 </dict>
 </plist>
